--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ django-crispy-forms = "==1.13.0"
 crispy-bootstrap5 = "*"
 django-filter = "*"
 gunicorn = "==19.9.0"
+django-heroku = "*"
 
 [dev-packages]
 
